--- a/Backend/package.json
+++ b/Backend/package.json
@@ -60,6 +60,7 @@
     "speakeasy": "^2.0.0",
     "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
+    "uuid": "^13.0.0",
     "whatsapp-cloud-api": "^0.3.1",
     "ws": "^8.18.3",
     "xlsx": "^0.18.5",
