--- a/Backend/.env.local
+++ b/Backend/.env.local
@@ -10,6 +10,13 @@ SERVER_URL=http://localhost:5000
 # Database (use SQLite for local development)
 USE_SQLITE=true
 
+# SQLite Database Configuration (for development only)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=magazine_dev
+DB_USER=dev_user
+DB_PASSWORD=dev_password
+
 # JWT Configuration (same as production for consistency)
 JWT_SECRET=MagazineWebsiteSecretKey2024!@#$%^&*()
 JWT_EXPIRES_IN=15m
