--- a/Backend/.env.local
+++ b/Backend/.env.local
@@ -2,20 +2,20 @@
 # This file overrides production settings for local development
 
 # Application
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
-FRONTEND_URL=http://localhost:5173
-SERVER_URL=http://localhost:5000
+FRONTEND_URL=https://menastories.me
+SERVER_URL=https://menastories.me
 
-# Database (use SQLite for local development)
-USE_SQLITE=true
+# Database (use PostgreSQL for production)
+USE_SQLITE=false
 
-# SQLite Database Configuration (for development only)
-DB_HOST=localhost
+# PostgreSQL Database Configuration
+DB_HOST=72.60.108.85
 DB_PORT=5432
-DB_NAME=magazine_dev
-DB_USER=dev_user
-DB_PASSWORD=dev_password
+DB_NAME=magazine
+DB_USER=myuser
+DB_PASSWORD=Advocate@vandan@28
 
 # JWT Configuration (same as production for consistency)
 JWT_SECRET=MagazineWebsiteSecretKey2024!@#$%^&*()
@@ -49,12 +49,12 @@ HEALTH_CHECK_ENDPOINT=/health
 
 # Image Upload
 IMAGE_UPLOAD_ENDPOINT=/upload
-IMAGE_BASE_URL=http://localhost:5000/api/upload/images/
+IMAGE_BASE_URL=https://menastories.me/api/upload/images/
 
-# Google reCAPTCHA Configuration (use development bypass)
+# Google reCAPTCHA Configuration
 RECAPTCHA_SECRET_KEY=6LdNzrErAAAAAEHaqhH78ewSt8zFQF6mp3siq9R2
 
-# CORS Configuration for local development
-CORS_ORIGIN=http://localhost:5173
+# CORS Configuration for production
+CORS_ORIGIN=https://menastories.me
 ENABLE_CORS=true
-LOG_LEVEL=debug
+LOG_LEVEL=info
