--- a/Magazine_Website/package.json
+++ b/Magazine_Website/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.5",
     "jsonld": "^8.3.3",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.544.0",
     "pdf-viewer-reactjs": "^2.2.3",
     "pdfjs-dist": "^5.4.149",
     "qrcode.react": "^3.1.0",
